# financial-planner

./: .pypirc  LICENSE  NOTICE.txt  README.md  __init__.py  car_affordability.py  pyproject.toml  setup.py
financial_planner/: __init__.py
financial_planner/calculators/: Cash_Flow_Analysis.py  README.md  Savings_Goals.py
financial_planner/calculators/Cash_Flow_Analysis/: Cash_Flow_Analysis.py  test.py
financial_planner/calculators/CollegeFunding/: __init__.py  college_funding_scenarios.py
financial_planner/calculators/LTCI_cost_of_waiting/: LTCI_Cost_of_Waiting .ipynb  LTCI_cost_of_waiting.py
financial_planner/calculators/PersonalInflation/: personal_inflation_scenario.py
financial_planner/calculators/credit/: credit_card_payment_scenarios.py
financial_planner/calculators/life_insurance/: Life_insurance.ipynb  life_insurance.py
financial_planner/calculators/tests/: test_LTCI_cost_of_waiting.py  test_life_insurance.py
financial_planner/entities/: CollegeStudent.py  car_affordability.py  credit_card.py  expense.py  household.py  income.py  monthly_expense.py  monthly_income.py  mortgage_acceleration.py  term_structure.py
financial_planner/entities/tests/: test_car_affodability.py  test_college_student.py  test_inflation.py  test_liability_credit_card.py  test_monthly_expense.py  test_monthly_income.py  test_mortgage_acceleration.py
financial_planner/examples/cash flow analysis/: cash flow analysis.ipynb
financial_planner/examples/college funding/: College Funding.ipynb  Tuition.csv
portformer/: NOTICE.txt  README.md
(+4 files in other folders)
